2012-03-07  Sancho Lerena <slerena@artica.es>

        * lib/PandoraFMS/Core.pm: Updated version.

        * lib/PandoraFMS/DataServer.pm: Support for "UNIT" tag in the
        XML to update module data units from the XML.

        * util/pandora_csvbridge.pl: New tool to create XML data files
        from CSV files containing data.

        * util/pandora_watchdog.sh: Watchdog for Pandora FMS server,
        taken from the documentation and updated.

	*  util/pandora_dbstress.pl, 
	util/pandora_db.pl: Updated version strings.

2012-02-29  Vanessa Gil  <vanessa.gil@artica.es>

	* bin/PandoraFMS/Core.pm: Fixed bug: HTML entities in alert name.

2012-02-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* util/pandora_manage.pl: Modify call to function 
	pandora_delete_not_policy_modules adding md5 filename like a 
	parameter.

	Fixes: #3486481

2012-02-28  Vanessa Gil  <vanessa.gil@artica.es>

	* bin/PandoraFMS/Core.pm: Fixed bug: double safe_input in event name.

2012-02-20  Koichiro Kikuchi  <koichiro@rworks.jp>

	* lib/PandoraFMS/SNMPServer.pm: Parse source field to obtain source
	 IP address not only when trap version is SNMPv2, but also 
	 snmp_pdu_address set to 1.

	* conf/pandora_server.conf: Fixed comment.

	* FreeBSD/pandora_server.conf: Added missing configuration tokens.

2012-02-20  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf,
	  lib/PandoraFMS/SNMPServer.pm,
	  lib/PandoraFMS/Config.pm: Added two new configuration tokens
	  suggested by Koichiro: snmp_ignore_authfailure and snmp_pdu_address.

2012-02-16  Vanessa Gil  <vanessa.gil@artica.es>

	* util/pandora_manage.pl: Modify user comment format.

2012-02-16  Vanessa Gil  <vanessa.gil@artica.es>

	* util/pandora_manage.pl: Changed user comment format.

2012-02-16  Hirofumi Kosaka <kosaka@rworks.jp>

	* bin/tentacle_server: Upgraded to 0.3.0 (Merged from
	pandora_agent package).

2012-02-15  Koichiro Kikuchi  <koichiro@rworks.jp>
